styles.css
body {
    display: flex;
    flex-direction: column;
    font-family: roboto;
    margin: 0;
    padding: 0;
}

.top {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #1F2937;
    padding-bottom: 100px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 10px;
}

.top-container {
    display: flex;
    flex-direction: column;
}

.top-content {
    display: flex;
    align-items: center;
    padding-top: 70px;
    gap: 25px;
}

.middle-top {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cards-container {
    display: flex;
    padding: 25px;
}

.description {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 350px;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 600;
}

.description-title {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.description-content {
    color: #E5E7EB;
    font-size: 18px;
}

.img-placeholder {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(220, 220, 220, 0.506);
    height: 200px;
    width: 600px;
    margin: 5px;
    color: #E5E7EB;
    font-size: 18px;
}


.middle-top-title {
    font-weight: 800;
    font-size: 36px;
    color: #1F2937;
}

.middle-bottom {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
    flex-basis: 300px;
    background-color: #E5E7EB;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    color: #1F2937
}

.middle-bottom-container {
    padding: 20px;
    width: 800px;
}

.author {
    display: flex;
    justify-content: flex-end;
    font-weight: 400;
}

.bottom {
    display: flex;
    justify-content: center;
    padding: 50px;
}

.bottom-text-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 10px;
}

.bottom-text {
    display: flex;
    flex-direction: column;
    color: #FFFFFF;
    font-size: 20px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    height: 72px;
    color: #E5E7EB;
}

/* CSS elements */

.top-signup, .bottom-signup {
    display: inline-block;
    outline: none;
    cursor: pointer;
    padding: 0 16px;
    background-color: #3882F6;
    border-radius: 0.25rem;
    border: 1px solid #3882F6;
    color: #fff;
    height: 30px;
    width: 80px;
    font-size: 13px;
    line-height: 30px;
    font-weight: 600;
    text-align: center;
}

.bottom-signup {
    border: 2px solid #FFFFFF;
}

.card {
    border: 3px solid #3882F6;
    border-radius: 25px;
    padding: 20px;
    width: 100px;
    height: 110px;
}

.info {
    padding-top: 20px;
    padding-bottom: 20px;
    max-width: 250px;
}

.middle-top-title {
    padding-top: 25px;
}

.rectangle {
    background-color: #3882F6;
    height: 70px;
    width: 900px;
    border: 1px solid #3882F6;
    border-radius: 4px;
    padding: 25px;
}

.rectangle-header {
    font-weight: 800;
}

a {
    color: #E5E7EB;
    font-size: 18px;
    text-decoration: none;
}

ul {
    display: flex;
    gap: 20px;
    list-style: none;
}

